[gd_scene load_steps=4 format=3 uid="uid://cyls7b5tbnyuw"]

[ext_resource type="Script" uid="uid://bqbs7cbv6hf6x" path="res://scripts/player.gd" id="1_3j5lm"]
[ext_resource type="Texture2D" uid="uid://5gxjdldgedir" path="res://assets/made-a-transparent-version-of-that-firefly-emoji-from-v0-ttrcb5e9mjhc1.webp" id="2_3j5lm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx3ei"]
size = Vector2(64, 64)

[node name="player" type="CharacterBody2D"]
z_index = 5
scale = Vector2(0.5, 0.5)
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_3j5lm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, -3.8147e-06)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_3j5lm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
shape = SubResource("RectangleShape2D_jx3ei")

[node name="RayCast_down" type="RayCast2D" parent="."]
target_position = Vector2(0, 48)
hit_from_inside = true

[node name="RayCast_up" type="RayCast2D" parent="."]
target_position = Vector2(0, -48)

[node name="RayCast_left" type="RayCast2D" parent="."]
target_position = Vector2(-48, 0)

[node name="RayCast_right" type="RayCast2D" parent="."]
target_position = Vector2(48, 0)
